--- a/index.html
+++ b/index.html
@@ -69,26 +69,22 @@
 
 <body>
     <div class="background">
-        <div class="header">
-            <div class="text-center">
-                <a
-                    href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
-                    <img src="./logo.fa681984.webp" alt="" class="img-fluid" style="width: 22%;">
-                </a>
-            </div>
-        </div>
+        <header class="header text-center">
+            <a
+                href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
+                <img src="./logo.fa681984.webp" alt="" class="img-fluid" style="width: 22%;">
+            </a>
+        </header>
 
-        <div class="px-lg-5 game-info">
-            <div class="text-center">
-                <h3 class="mb-4 heading">
-                    $7,500 Bonus + 30 Free Spins <br> on Big Game
-                </h3>
+        <div class="game-info text-center">
+            <h3 class="mb-4 heading">
+                $7,500 Bonus + 30 Free Spins <br> on Big Game
+            </h3>
 
-                <a href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}"
-                    class="mx-md-0 mx-auto btn cta-button mt-4">
-                    Sign Up Now
-                </a>
-            </div>
+            <a href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}"
+                class="mx-md-0 mx-auto btn cta-button mt-4">
+                Sign Up Now
+            </a>
         </div>
 
         <footer class="footer">
