update new code 15

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             padding: 50px 0;
         }
 
-        .background {
+        /*.background {
             background: url("public.webp") no-repeat;
             background-size: cover;
             background-position: center center;
-        }
+        }*/
 
         .game-info h2 {
             color: #000;
@@ -59,11 +59,11 @@
             font-weight: 700;
         }
 
-        .footer {
+        /*.footer {
             padding-top: 1.875rem;
             padding-bottom: 1.5rem;
             text-align: center;
-        }
+        }*/
     </style>
 </head>
 
@@ -76,7 +76,7 @@
             </a>
         </header>
 
-        <div class="game-info text-center">
+        <!--<div class="game-info text-center">
             <h3 class="mb-4 heading">
                 $7,500 Bonus + 30 Free Spins <br> on Big Game
             </h3>
@@ -85,12 +85,37 @@
                 class="mx-md-0 mx-auto btn cta-button mt-4">
                 Sign Up Now
             </a>
+        </div>-->
+
+        <div class="px-lg-5 game-info">
+            <div class="container">
+                <div class="row g-4">
+                    <div class="col-lg-6 my-auto mx-auto">
+                        <img src="./upper-crust-abbey-html-videoslots.jpg" alt="" class="img-fluid">
+                    </div>
+
+                    <div class="col-lg-6 my-lg-auto ps-lg-5">
+                        <div class="text-center text-lg-start">
+                            <h3 class="mb-4 heading">
+                                $7,500 Bonus + 30 Free Spins <br> on Big Game
+                            </h3>
+
+                            <a href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}"
+                                class="mx-md-0 mx-auto btn cta-button mt-4">
+                                Sign Up Now
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <footer class="footer">
+
+        <footer class="footer text-center">
             <a
                 href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
-                <img src="./logo.gif" alt="">
+                <img src="./luckycreekawards (1).png" alt="" class="img-fluid" style="width: 60%;">
             </a>
         </footer>
     </div>
