--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
-        body {
+        /*body {
             background-color: #1D0C08;
-        }
+        }*/
 
         .header {
             padding-top: 30px;
@@ -55,20 +55,20 @@
         }
 
         .heading {
-            color: #ffffff;
+            color: #000;
             font-weight: 700;
         }
 
-        /*.footer {
+        .footer {
             padding-top: 1.875rem;
             padding-bottom: 1.5rem;
             text-align: center;
-        }*/
+        }
     </style>
 </head>
 
 <body>
-    <div class="background">
+    <div>
         <header class="header text-center">
             <a
                 href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
@@ -90,8 +90,8 @@
         <div class="px-lg-5 game-info">
             <div class="container">
                 <div class="row g-4">
-                    <div class="col-lg-6 my-auto mx-auto">
-                        <img src="./upper-crust-abbey-html-videoslots.jpg" alt="" class="img-fluid">
+                    <div class="col-lg-6 my-auto text-center">
+                        <img src="./hercules-the-12-labours-html-videoslots.jpg" alt="" class="img-fluid">
                     </div>
 
                     <div class="col-lg-6 my-lg-auto ps-lg-5">
@@ -111,13 +111,12 @@
             </div>
         </div>
 
-
-        <footer class="footer text-center">
+        <!--<footer class="footer">
             <a
                 href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
                 <img src="./luckycreekawards (1).png" alt="" class="img-fluid" style="width: 60%;">
             </a>
-        </footer>
+        </footer>-->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
