update new code 15

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
 <body>
     <div>
-        <header class="header text-center">
+        <!--<header class="header text-center">
             <a
                 href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
                 <img src="./logo.fa681984.webp" alt="" class="img-fluid" style="width: 22%;">
             </a>
-        </header>
+        </header>-->
 
         <!--<div class="game-info text-center">
             <h3 class="mb-4 heading">
@@ -96,7 +96,12 @@
 
                     <div class="col-lg-6 my-lg-auto ps-lg-5">
                         <div class="text-center text-lg-start">
-                            <h3 class="mb-4 heading">
+                            <a
+                                href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
+                                <img src="./logo.fa681984.webp" alt="" class="img-fluid" style="width: 85%;">
+                            </a>
+
+                            <h3 class="mb-4 heading mt-5">
                                 $7,500 Bonus + 30 Free Spins <br> on Big Game
                             </h3>
 
