--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
-        /*body {
+        body {
             background-color: #1D0C08;
-        }*/
+        }
 
+        /*
         .header {
             padding-top: 30px;
-        }
+        }*/
 
         .game-info {
             padding: 50px 0;
@@ -28,8 +29,11 @@
         }*/
 
         .game-info h2 {
-            color: #000;
+            color: #ffffff;
+            font-size: 42px;
+            font-style: italic;
             text-transform: uppercase;
+            margin-bottom: 35px;
             font-weight: 700;
         }
 
@@ -55,7 +59,7 @@
         }
 
         .heading {
-            color: #000;
+            color: #ffffff;
             font-weight: 700;
         }
 
@@ -69,12 +73,12 @@
 
 <body>
     <div>
-        <!--<header class="header text-center">
+        <header class="header text-center">
             <a
                 href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
-                <img src="./logo.fa681984.webp" alt="" class="img-fluid" style="width: 22%;">
+                <img src="./61BHHjvK6ZL.png" alt="" class="img-fluid" style="width: 20%;">
             </a>
-        </header>-->
+        </header>
 
         <!--<div class="game-info text-center">
             <h3 class="mb-4 heading">
@@ -96,13 +100,11 @@
 
                     <div class="col-lg-6 my-lg-auto ps-lg-5">
                         <div class="text-center text-lg-start">
-                            <a
-                                href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}">
-                                <img src="./logo.fa681984.webp" alt="" class="img-fluid" style="width: 85%;">
-                            </a>
 
-                            <h3 class="mb-4 heading mt-5">
-                                $7,500 Bonus + 30 Free Spins <br> on Big Game
+                            <h2>lucky Creek</h2>
+
+                            <h3 class="mb-4 heading">Welcome to the World
+                                Fast Registration
                             </h3>
 
                             <a href="https://ehyprsolutionllp10240231.o18.link/c?o=21099813&m=11176&a=572992&aff_click_id={replace_it}&sub_aff_id={replace_it}"
